[package]
name = "termshot"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
bevy = { version = "0.18.1", default-features = false }
anyhow = "1.0.102"
better_default = "1.0.5"
approx = "0.5.1"

[features]
default = [
  "bevy/dev",
  "bevy/audio",
  "bevy/default_app",
  "bevy/std",
  "bevy/sysinfo_plugin",
  "bevy/multi_threaded",
  "bevy/scene",
  "bevy/hotpatching",
]

[lints.clippy]
# for bevy projects because of Res<T> and ResMut<T>
needless_pass_by_value = "allow"


#
# --- Recommended Bevy Compilation Settings ---
#
# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
